# PolyEngineRS

./: .gitattributes  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml  fmt.yml  rust-fmt.yml  rust.yml
core/: Cargo.toml
core/src/: lib.rs  math.rs  types.rs
editor/: Cargo.toml
editor/src/: client.rs  main.rs  primitives.rs
engine/: Cargo.toml
engine/src/: engine.rs  features.rs  lib.rs
graphics/: Cargo.toml
graphics/src/: common.rs  config.rs  context.rs  error.rs  geometry.rs  lib.rs  renderer.rs  system.rs  target.rs  vertex.rs  window.rs
gui/: Cargo.toml
