[package]
name = "polyengine-core"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Michał Majczak <michal.majczak92@gmail.com>"
    ]
edition = "2018"
crate-type = ["dylib"]

[dependencies]
approx = "0.3.2"
nalgebra = "0.21"
static_assertions = "1.1.0"
serde = { version = "1.0", features = ["derive"] }