[package]
name = "polyengine"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Michał Majczak <michal.majczak92@gmail.com>"
    ]
edition = "2018"
crate-type = ["dylib"]

[features]
graphics = ["vulkano", "vulkano-shaders", "vulkano-win", "winit"]
audio = []
networking = []

[dependencies]
polyengine-core = {path = "../core", features=[]}

vulkano = { version = "0.18", optional = true }
vulkano-shaders = { version = "0.18", optional = true }
vulkano-win = { version = "0.18", optional = true }
winit = { version = "0.22", optional = true }