[package]
name = "polyengine"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Michał Majczak <michal.majczak92@gmail.com>"
    ]
edition = "2018"
crate-type = ["dylib"]

[features]
graphics = ["polyengine-graphics", "polyengine-gui"]
audio = []
networking = []

[dependencies]
polyengine-core = {path = "../core", features=[]}
polyengine-graphics = {path = "../graphics", features=[], optional = true }
polyengine-gui = {path = "../gui", features=[], optional = true }