[package]
name = "polyengine-gui"
version = "0.1.0"
authors = [
    # Extend this list when submiting PR
    "Michał Majczak <michal.majczak92@gmail.com>"
    ]
edition = "2018"
crate-type = ["dylib"]

[dependencies]
polyengine-core = {path = "../core", features=[]}
polyengine-graphics = {path = "../graphics", features=[], optional = true }